<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true">

  <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    tools:context=".ui.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/company_id_input_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/user_id_input_layout"
      app:helperText="@string/company_id_label"
      app:helperTextTextAppearance="@style/HelperTextLabel"
      app:layout_constraintVertical_chainStyle="packed"
      app:layout_constraintVertical_bias=".1"
      style="@style/Padding"
      >

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/company_id_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/company_id_label"
        android:textAppearance="@style/HintTextLabel"
        android:drawableStart="@drawable/ic_baseline_company_24"
        android:background="@drawable/round_button"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/user_id_input_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/company_id_input_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/password_input_layout"
      app:helperTextTextAppearance="@style/HelperTextLabel"
      app:helperText="@string/user_id_label"
      style="@style/Padding"
      >

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_id_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/user_id_label"
        android:textAppearance="@style/HintTextLabel"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:background="@drawable/round_button"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/password_input_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/user_id_input_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/login_loading_progress_bar"
      app:helperTextTextAppearance="@style/HelperTextLabel"
      app:helperText="@string/password_label"
      app:passwordToggleEnabled="true"
      style="@style/Padding"
      >

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_label"
        android:textAppearance="@style/HintTextLabel"
        android:drawableStart="@drawable/ic_baseline_password_24"
        android:background="@drawable/round_button"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/password_input_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/login_button"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="20dp"
      android:id="@+id/login_loading_progress_bar"
      android:indeterminate="true"
      android:visibility="gone"
      />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/login_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/round_button"
      android:text="@string/login_label"
      android:textAllCaps="false"
      android:textSize="25sp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="50dp"
      android:layout_marginBottom="30dp"
      app:layout_constraintTop_toBottomOf="@id/login_loading_progress_bar"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      />

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>