<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">

  <data>
    <import type="android.view.View" />
    <variable
      name="employeeData"
      type="com.synel.perfectharmony.models.EmployeeData" />
    <variable
      name="attendanceCalculatedData"
      type="com.synel.perfectharmony.models.AttendanceCalculatedData" />
    <variable
      name="selectedMonthStr"
      type="java.lang.String" />
    <variable
      name="isEmptyAttendanceData"
      type="java.lang.Boolean" />
  </data>

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      tools:context=".ui.AttendanceDataActivity">

      <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_employee_name_text_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/employee_role"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias=".1"
        android:text='@{@string/welcome_employee_name_text(employeeData.name ?? "")}'
        android:gravity="center"
        android:textStyle="bold"
        android:paddingHorizontal="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:visibility='@{employeeData != null ? View.VISIBLE : View.INVISIBLE}' />

      <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/employee_role"
        app:layout_constraintTop_toBottomOf="@+id/welcome_employee_name_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/employee_details_cross_line"
        android:text='@{employeeData.role ?? ""}'
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:visibility='@{employeeData != null ? View.VISIBLE : View.INVISIBLE}' />

      <View
        android:id="@+id/employee_details_cross_line"
        app:layout_constraintTop_toBottomOf="@+id/employee_role"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/month_top_barrier"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#707070" />

      <androidx.constraintlayout.widget.Barrier
        android:id="@+id/month_top_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="selected_month,change_month_button" />

      <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/selected_month"
        app:layout_constraintTop_toBottomOf="@+id/month_top_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/month_selection_guideline"
        app:layout_constraintBottom_toTopOf="@id/month_bottom_barrier"
        android:gravity="center"
        android:text='@{selectedMonthStr ?? ""}'
        android:textSize="23sp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:paddingVertical="5dp"
        android:visibility='@{selectedMonthStr != null ? View.VISIBLE : View.INVISIBLE}' />

      <androidx.constraintlayout.widget.Guideline
        android:id="@+id/month_selection_guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/change_month_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/change_month_label"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/month_top_barrier"
        app:layout_constraintStart_toEndOf="@+id/month_selection_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/month_bottom_barrier"
        android:visibility='@{selectedMonthStr != null ? View.VISIBLE : View.INVISIBLE}' />

      <androidx.constraintlayout.widget.Barrier
        android:id="@+id/month_bottom_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="selected_month,change_month_button" />

      <View
        android:id="@+id/select_month_cross_line"
        app:layout_constraintTop_toBottomOf="@+id/month_bottom_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fetch_server_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#707070" />

      <com.google.android.material.progressindicator.CircularProgressIndicator
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fetch_server_progress_bar"
        app:layout_constraintTop_toBottomOf="@+id/select_month_cross_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fetch_server_progress_bar_text"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:indeterminate="true"
        android:visibility="gone" />

      <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fetch_server_progress_bar_text"
        app:layout_constraintTop_toBottomOf="@+id/fetch_server_progress_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/emptyAttendanceData"
        android:text="@string/please_wait"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:visibility="gone" />

      <com.google.android.material.textview.MaterialTextView
        android:id="@+id/emptyAttendanceData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        android:text="@string/empty_attendance_data"
        android:textAlignment="center"
        android:textSize="25sp"
        android:visibility='@{isEmptyAttendanceData ? View.VISIBLE : View.GONE}'
        app:layout_constraintBottom_toTopOf="@id/actual_working_hours_today_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fetch_server_progress_bar_text" />

      <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/actual_working_hours_today_text_view"
        app:layout_constraintTop_toBottomOf="@+id/emptyAttendanceData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/extra_missing_hours_text_view"
        android:text='@{attendanceCalculatedData.actualHoursToday ?? ""}'
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility='@{attendanceCalculatedData != null &amp;&amp; attendanceCalculatedData.isCurrentMonthData ? View.VISIBLE : View.GONE}' />

      <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/extra_missing_hours_text_view"
        app:layout_constraintTop_toBottomOf="@+id/actual_working_hours_today_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/max_hours_warning"
        android:text='@{@string/extra_missing_hours_text(attendanceCalculatedData.extraMissingWord ?? "", attendanceCalculatedData.extraMissingHours ?? "")}'
        android:textColor="@{attendanceCalculatedData.extraMissingWord.equals(@string/missing_hours_word) ? @color/red : @color/green}"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:textSize="22sp"
        android:visibility='@{attendanceCalculatedData != null ? View.VISIBLE : View.INVISIBLE}' />

      <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/max_hours_warning"
        app:layout_constraintTop_toBottomOf="@+id/extra_missing_hours_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/today_data_cross_line"
        android:text='@{attendanceCalculatedData.maxHoursWarning ?? ""}'
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:textSize="18sp"
        android:visibility='@{attendanceCalculatedData != null &amp;&amp; attendanceCalculatedData.isCurrentMonthData &amp;&amp; attendanceCalculatedData.maxHoursWarning != null ? View.VISIBLE : View.GONE}' />

      <View
        android:id="@+id/today_data_cross_line"
        app:layout_constraintTop_toBottomOf="@+id/max_hours_warning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/raw_hours_data_top_barrier"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility='@{isEmptyAttendanceData ? View.GONE : View.VISIBLE}'
        android:background="#707070" />

      <androidx.constraintlayout.widget.Barrier
        android:id="@+id/raw_hours_data_top_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="total_expected_working_hours_text_view,total_actual_working_hours_text_view,expected_working_hours_today_text_view" />

      <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/total_expected_working_hours_text_view"
        app:layout_constraintTop_toBottomOf="@+id/raw_hours_data_top_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/total_actual_working_hours_text_view"
        app:layout_constraintBottom_toTopOf="@id/raw_hours_data_bottom_barrier"
        android:text='@{@string/total_expected_working_hours_text(attendanceCalculatedData.totalExpectedHoursUpToday ?? "")}'
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:paddingVertical="10dp"
        android:textAlignment="center"
        android:visibility='@{attendanceCalculatedData != null ? View.VISIBLE : View.INVISIBLE}' />

      <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/total_actual_working_hours_text_view"
        app:layout_constraintTop_toBottomOf="@+id/raw_hours_data_top_barrier"
        app:layout_constraintStart_toEndOf="@+id/total_expected_working_hours_text_view"
        app:layout_constraintEnd_toStartOf="@id/expected_working_hours_today_text_view"
        app:layout_constraintBottom_toTopOf="@id/raw_hours_data_bottom_barrier"
        android:text='@{@string/total_actual_working_hours_text(attendanceCalculatedData.totalActualHoursUpToday ?? "")}'
        android:paddingHorizontal="5dp"
        android:paddingVertical="10dp"
        android:textAlignment="center"
        android:visibility='@{attendanceCalculatedData != null ? View.VISIBLE : View.INVISIBLE}' />

      <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/expected_working_hours_today_text_view"
        app:layout_constraintTop_toBottomOf="@+id/raw_hours_data_top_barrier"
        app:layout_constraintStart_toEndOf="@id/total_actual_working_hours_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/raw_hours_data_bottom_barrier"
        android:text='@{@string/expected_working_hours_today_text(attendanceCalculatedData.expectedHoursToday ?? "")}'
        android:paddingStart="5dp"
        android:paddingEnd="10dp"
        android:paddingVertical="10dp"
        android:textAlignment="center"
        android:visibility='@{attendanceCalculatedData != null &amp;&amp; attendanceCalculatedData.isCurrentMonthData ? View.VISIBLE : View.INVISIBLE}' />

      <androidx.constraintlayout.widget.Barrier
        android:id="@+id/raw_hours_data_bottom_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="total_expected_working_hours_text_view,total_actual_working_hours_text_view,expected_working_hours_today_text_view" />

      <View
        android:id="@+id/error_days_cross_line"
        app:layout_constraintTop_toBottomOf="@+id/raw_hours_data_bottom_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/error_days_header_barrier"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility='@{isEmptyAttendanceData ? View.GONE : View.VISIBLE}'
        android:background="#707070" />

      <androidx.constraintlayout.widget.Barrier
        android:id="@+id/error_days_header_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="missing_entry_days_text_view,non_approved_days_text_view" />

      <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/missing_entry_days_text_view"
        app:layout_constraintTop_toBottomOf="@+id/error_days_header_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/error_days_guideline"
        app:layout_constraintBottom_toTopOf="@+id/error_days_data_barrier"
        android:text="@string/missing_entry_days_label"
        android:gravity="center"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:visibility='@{attendanceCalculatedData != null ? View.VISIBLE : View.INVISIBLE}' />

      <androidx.constraintlayout.widget.Guideline
        android:id="@+id/error_days_guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

      <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/non_approved_days_text_view"
        app:layout_constraintTop_toBottomOf="@+id/error_days_header_barrier"
        app:layout_constraintStart_toEndOf="@+id/error_days_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/error_days_data_barrier"
        android:text="@string/non_approved_days_label"
        android:gravity="center"
        android:textStyle="bold"
        android:paddingStart="5dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:visibility='@{attendanceCalculatedData != null ? View.VISIBLE : View.INVISIBLE}' />

      <androidx.constraintlayout.widget.Barrier
        android:id="@+id/error_days_data_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="missing_entry_days_text_view,non_approved_days_text_view" />

      <ListView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/missing_entry_days_list_view"
        app:layout_constraintTop_toBottomOf="@+id/error_days_data_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/error_days_guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:nestedScrollingEnabled="true" />

      <ListView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/non_approved_days_list_view"
        app:layout_constraintTop_toBottomOf="@+id/error_days_data_barrier"
        app:layout_constraintStart_toEndOf="@+id/error_days_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="5dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:nestedScrollingEnabled="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.core.widget.NestedScrollView>
</layout>